[gd_scene load_steps=9 format=3 uid="uid://dfta2ryiw0dqn"]

[ext_resource type="Script" path="res://src/MainMenu/MainMenu.gd" id="1_56rka"]
[ext_resource type="PackedScene" uid="uid://bdng4kdravix1" path="res://src/MainMenu/MenuBtn/MenuBtn.tscn" id="2_7dmal"]
[ext_resource type="PackedScene" uid="uid://dewg6kgfdtkaf" path="res://src/Multiplying/Multiplying.tscn" id="2_b7jxy"]
[ext_resource type="Texture2D" uid="uid://dqn4vkbyxnb7f" path="res://assets/icons/divide.png" id="3_r45t1"]
[ext_resource type="PackedScene" uid="uid://b68245yenpuv4" path="res://src/Dividing/Dividing.tscn" id="3_tf3kp"]
[ext_resource type="Texture2D" uid="uid://d274lc272g8sr" path="res://assets/icons/chart.png" id="4_f3uqj"]
[ext_resource type="PackedScene" uid="uid://d3unn0r65lsxy" path="res://src/OptionsScene/OptionsScene.tscn" id="4_uwfnt"]
[ext_resource type="Texture2D" uid="uid://dqkqlwhe3yfr8" path="res://assets/icons/settings.png" id="5_5x3fs"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_56rka")
multiplying_scene = ExtResource("2_b7jxy")
dividing_scene = ExtResource("3_tf3kp")
options_scene = ExtResource("4_uwfnt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="MultiplyBtn" parent="Panel/ButtonsContainer" instance=ExtResource("2_7dmal")]
unique_name_in_owner = true
layout_mode = 2

[node name="DivideBtn" parent="Panel/ButtonsContainer" instance=ExtResource("2_7dmal")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="Panel/ButtonsContainer/DivideBtn/MarginContainer/VBoxContainer" index="0"]
texture = ExtResource("3_r45t1")

[node name="Label" parent="Panel/ButtonsContainer/DivideBtn/MarginContainer/VBoxContainer" index="1"]
text = "dzielenie"

[node name="StatsBtn" parent="Panel/ButtonsContainer" instance=ExtResource("2_7dmal")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="Panel/ButtonsContainer/StatsBtn/MarginContainer/VBoxContainer" index="0"]
texture = ExtResource("4_f3uqj")

[node name="Label" parent="Panel/ButtonsContainer/StatsBtn/MarginContainer/VBoxContainer" index="1"]
text = "wyniki"

[node name="OptionsBtn" parent="Panel/ButtonsContainer" instance=ExtResource("2_7dmal")]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" parent="Panel/ButtonsContainer/OptionsBtn/MarginContainer/VBoxContainer" index="0"]
texture = ExtResource("5_5x3fs")

[node name="Label" parent="Panel/ButtonsContainer/OptionsBtn/MarginContainer/VBoxContainer" index="1"]
text = "opcje"

[editable path="Panel/ButtonsContainer/MultiplyBtn"]
[editable path="Panel/ButtonsContainer/DivideBtn"]
[editable path="Panel/ButtonsContainer/StatsBtn"]
[editable path="Panel/ButtonsContainer/OptionsBtn"]
